--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ server.port=8088
 spring.cloud.config.server.bootstrap=true
 spring.cloud.config.server.git.default-label=master
 spring.cloud.config.server.git.uri=https://github.com/jlawrenceraj/config.git
+spring.cloud.config.server.git.searchPaths={application}
 spring.cloud.config.server.git.username=rajlawrence@gmail.com
-spring.cloud.config.server.git.password=
+spring.cloud.config.server.git.password=Venus72%
 encrypt.key=APODNU3093r2rbjzxcn09u213asdhy08WRFH
